# m4chat2

./: .env.example  .replit  ADMIN_API.md  Dockerfile  GITHUB_SSH_SETUP.md  REBUILD_INSTRUCTIONS.txt  docker-compose.db-only.yml  docker-compose.full.yml  docker-compose.new-stack.yml  docker-compose.portainer.yml  docker-compose.production.yml  docker-compose.webeditor.yml  docker-compose.yml  nginx.conf  pnpm-lock.yaml  start-electron.ps1
.github/workflows/: deploy-db.yml  deploy.yml
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: admin.ts
artifacts/electron-app/: electron-builder.yml  package.json  tsconfig.json
artifacts/electron-app/src/: main.ts
artifacts/mockup-sandbox/: package.json  vite.config.ts
artifacts/mockup-sandbox/src/: App.tsx
artifacts/mockup-sandbox/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/mockup-sandbox/src-tauri/capabilities/: default.json
artifacts/mockup-sandbox/src-tauri/src/: lib.rs  main.rs
artifacts/mockup-sandbox/src/.generated/: mockup-components.ts
artifacts/mockup-sandbox/src/components/mockups/telegram/: CallsScreen.tsx  ChatDetailScreen.tsx  ChatsScreen.tsx  ContactsScreen.tsx  DesktopCalls.tsx  DesktopContacts.tsx  DesktopMain.tsx  DesktopSettings.tsx  SettingsScreen.tsx
attached_assets/: Pasted-UI-UX-Design-Prompt-Telegram-Clone-Project-Overview-Cre_1776078555356.txt
database/: schema.sql  test-db.js
lib/db/src/schema/: index.ts
scripts/: check-db.sh  setup-db.sh
